--- a/modeltest.ipynb
+++ b/modeltest.ipynb
@@ -118,7 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 고개 기울어짐"
+    "고개 기울어짐 체크 : YOLO  \n",
+    "눈 감은 것 체크 : MEDIAPIPE"
    ]
   },
   {
